--- a/front-end/contact.html
+++ b/front-end/contact.html
@@ -28,8 +28,8 @@
     <hr>
     <h2>Where you'll find me</h2>
     <footer>
-      <p>author: Mario Ayala</p>
-      <a href="mailto:mario@gmail.com">mario@gmail.com</a>
+      <p>author: John Coltrane</p>
+      <a href="mailto:coltrane@gmail.com">coltrane@gmail.com</a>
     </footer>
   </body>
 </html>
