--- a/front-end/index.html
+++ b/front-end/index.html
@@ -17,41 +17,36 @@
       </ul>
     </header>
     <h1>Personal Blog</h1>
+    <p>This blog is dedicaded to John Coltrane</p>
     <hr>
     <h2>About the author</h2>
     <figure>
-      <img src="assets/img/5c6d7c6b2ea63.jpeg" alt="Photo of Rafo with a icecream">
-      <figcaption>Photo of the author. Sweden 2018.</figcaption>
+      <img src="assets/img/coltrane.jfif" alt="Photo of John Coltrane with his saxophone">
+      <figcaption>Photo of John Coltrane</figcaption>
     </figure>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. A ordem dos tratores não altera o pão duris.
-        Atirei o pau no gatis, per gatis num morreus. Copo furadis é disculpa de bebadis, arcu quam
-        euismod magna. Detraxit consequat et quo num tendi nada. Não sou faixa preta cumpadi, sou
-        preto inteiris, inteiris. Quem manda na minha terra sou euzis! Nec orci ornare consequat.
-        Praesent lacinia ultrices consectetur. Sed non ipsum felis. Quem num gosta di mim que vai
-        caçá sua turmis!</p>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. A ordem dos tratores não altera o pão duris.
-        Atirei o pau no gatis, per gatis num morreus. Copo furadis é disculpa de bebadis, arcu quam
-        euismod magna. Detraxit consequat et quo num tendi nada. Não sou faixa preta cumpadi, sou
-        preto inteiris, inteiris. Quem manda na minha terra sou euzis! Nec orci ornare consequat.
-        Praesent lacinia ultrices consectetur. Sed non ipsum felis. Quem num gosta di mim que vai
-        caçá sua turmis!</p>
+    <p>John William Coltrane (September 23, 1926 – July 17, 1967) was an American jazz saxophonist
+        and composer. Working in the bebop and hard bop idioms early in his career, Coltrane helped
+        pioneer the use of modes and was at the forefront of free jazz. He led at least fifty
+        recording sessions and appeared on many albums by other musicians, including trumpeter
+        Miles Davis and pianist Thelonious Monk. Over the course of his career, Coltrane's music
+        took on an increasingly spiritual dimension. He remains one of the most influential
+        saxophonists in music history. He received numerous posthumous awards, including
+        canonization by the African Orthodox Church and a Pulitzer Prize in 2007. His second wife
+        was pianist and harpist Alice Coltrane. The couple had three children: John Jr.
+        (1964–1982), a bassist; Ravi (born 1965), a saxophonist; and Oran (born 1967), also a
+        saxophonist.</p>
+    <h3>His work</h3>
+    <iframe width="560" height="315"
+        src="https://www.youtube-nocookie.com/embed/IsBbM5PIAHk?controls=0" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
     <hr>
     <h2>On the blog's purpose </h2>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. A ordem dos tratores não altera o pão duris.
-        Atirei o pau no gatis, per gatis num morreus. Copo furadis é disculpa de bebadis, arcu quam
-        euismod magna. Detraxit consequat et quo num tendi nada. Não sou faixa preta cumpadi, sou
-        preto inteiris, inteiris. Quem manda na minha terra sou euzis! Nec orci ornare consequat.
-        Praesent lacinia ultrices consectetur. Sed non ipsum felis. Quem num gosta di mim que vai
-        caçá sua turmis!</p>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. A ordem dos tratores não altera o pão duris.
-        Atirei o pau no gatis, per gatis num morreus. Copo furadis é disculpa de bebadis, arcu quam
-        euismod magna. Detraxit consequat et quo num tendi nada. Não sou faixa preta cumpadi, sou
-        preto inteiris, inteiris. Quem manda na minha terra sou euzis! Nec orci ornare consequat.
-        Praesent lacinia ultrices consectetur. Sed non ipsum felis. Quem num gosta di mim que vai
-        caçá sua turmis!</p>
+    <p>This blog's intent is to spread Coltrane's work</p>
     <footer>
-      <p>author: Mario Ayala</p>
-      <a href="mailto:mario@gmail.com">mario@gmail.com</a>
+      <p>author: John Coltrane</p>
+      <a href="mailto:coltrane@gmail.com">coltrane@gmail.com</a>
     </footer>
   </body>
 </html>
